--- a/pocket_coffea/parameters/executor_options_defaults.yaml
+++ b/pocket_coffea/parameters/executor_options_defaults.yaml
@@ -3,10 +3,11 @@ general:
   chunksize: 50000
   limit-files: null
   limit-chunks: null
-  retries: 20
+  retries: 1
   tree-reduction: 20
   skip-bad-files: false
   voms-proxy: null
+  ignore-grid-certificate: false
 
 dask@lxplus:
   scaleout: 10
@@ -43,3 +44,13 @@ parsl-condor@DESY_NAF:
   logs-dir: logs_parsl
   queue: ""
   walltime: "12:00:00"
+  ignore-grid-certificate: false
+  
+parsl-condor@RWTH:
+  scaleout: 1
+  mem_per_worker: 2 # GB
+  logs-dir: logs_parsl
+  local-virtualenv: false
+  cores-per-worker: 1
+  walltime: "12:00:00"
+  ignore-grid-certificate: false
