--- a/pocket_coffea/parameters/variations.yaml
+++ b/pocket_coffea/parameters/variations.yaml
@@ -26,6 +26,24 @@ systematic_variations:
       '2022_preEE': "${.2016_PreVFP}"
       '2022_postEE': "${.2016_PreVFP}"
 
+    sf_btag_fixed_wp:
+      '2016_PreVFP':
+        - isr
+        - fsr
+        - hdamp
+        - jes
+        - jer
+        - pileup
+        - qcdscale
+        - statistic
+        - topmass
+        - type3
+      '2016_PostVFP': "${.2016_PreVFP}"
+      '2017': "${.2016_PreVFP}"
+      '2018': "${.2016_PreVFP}"
+      '2022_preEE': "${.2016_PreVFP}"
+      '2022_postEE': "${.2016_PreVFP}"
+
     sf_ctag:
       '2016_PreVFP':
         - Extrap
