--- a/pocket_coffea/parameters/lepton_scale_factors.yaml
+++ b/pocket_coffea/parameters/lepton_scale_factors.yaml
@@ -19,6 +19,7 @@ lepton_scale_factors:
     JSONfiles: 
       '2016_PreVFP':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2016preVFP_UL/electron.json.gz
+        apply_eleSS: False
         name: UL-Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -26,6 +27,7 @@ lepton_scale_factors:
   
       '2016_PostVFP':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2016postVFP_UL/electron.json.gz
+        apply_eleSS: False
         name: UL-Electron-ID-SF    
         reco:
           pt_lt_20: RecoBelow20
@@ -33,6 +35,7 @@ lepton_scale_factors:
 
       '2017':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2017_UL/electron.json.gz
+        apply_eleSS: False
         name: UL-Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -40,6 +43,7 @@ lepton_scale_factors:
 
       '2018':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2018_UL/electron.json.gz
+        apply_eleSS: False
         name: UL-Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -48,6 +52,7 @@ lepton_scale_factors:
       '2022_preEE':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2022_Summer22/electron.json.gz
         fileSS: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2022_Summer22/electronSS.json.gz
+        apply_eleSS: True
         name: Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -57,6 +62,7 @@ lepton_scale_factors:
       '2022_postEE':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2022_Summer22EE/electron.json.gz
         fileSS: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2022_Summer22EE/electronSS.json.gz
+        apply_eleSS: True
         name: Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -66,6 +72,7 @@ lepton_scale_factors:
       '2023_preBPix':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2023_Summer23/electron.json.gz
         fileSS: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2023_Summer23/electronSS.json.gz
+        apply_eleSS: True
         name: Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
@@ -75,6 +82,7 @@ lepton_scale_factors:
       '2023_postBPix':
         file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2023_Summer23BPix/electron.json.gz
         fileSS: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2023_Summer23BPix/electronSS.json.gz
+        apply_eleSS: True
         name: Electron-ID-SF
         reco:
           pt_lt_20: RecoBelow20
