First additions to defaults for 2024

--- a/pocket_coffea/parameters/jet_scale_factors.yaml
+++ b/pocket_coffea/parameters/jet_scale_factors.yaml
@@ -37,6 +37,8 @@ jet_scale_factors:
         '2023_postBPix':
             file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2023_Summer23BPix/btagging.json.gz
             name: "deepJet_shape"
+        '2024':
+            # file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/BTV/2024_Summer24 NOT AVAILABLE YET
 
     ctagSF:
       # DeepJet AK4 tagger shape SF
@@ -119,3 +121,6 @@ jet_scale_factors:
         '2023_postBPix':
             file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2023_Summer23BPix/jetvetomaps.json.gz
             name: "Summer23BPixPrompt23_RunD_V1"
+        '2024': #Recommendations: https://cms-jerc.web.cern.ch/Recommendations/#jet-veto-maps
+            file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2024_Summer24/jetvetomaps.json.gz
+            name: "Summer24Prompt24_RunBCDEFGHI_V1"
