--- a/pocket_coffea/parameters/lepton_scale_factors.yaml
+++ b/pocket_coffea/parameters/lepton_scale_factors.yaml
@@ -83,6 +83,9 @@ lepton_scale_factors:
           pt_gt_20_lt_75: Reco20to75
           pt_gt_75: RecoAbove75
 
+      '2024':
+        file: "NOT AVAILABLE YET"
+
     era_mapping:
       # this is needed because the correction set provided by EGM
       # have a fixed set of era labels, different from ours
