--- a/pocket_coffea/parameters/pileup.yaml
+++ b/pocket_coffea/parameters/pileup.yaml
@@ -23,4 +23,6 @@ pileupJSONfiles:
   2023_postBPix:
     file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/LUM/2023_Summer23BPix/puWeights.json.gz
     name: Collisions2023_369803_370790_eraD_GoldenJson
+  "2024":
+    file: NOT AVAILABLE YET
 
