--- a/pocket_coffea/parameters/jets_calibration.yaml
+++ b/pocket_coffea/parameters/jets_calibration.yaml
@@ -452,7 +452,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2016
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2016
           - JES_HF
@@ -467,7 +466,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2016
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2016
           - JES_HF
@@ -482,7 +480,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2017
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2017
           - JES_HF
@@ -498,7 +495,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2018
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2018
           - JES_HF
@@ -514,7 +510,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2022
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2022
           - JES_HF
@@ -529,7 +524,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2022
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2022
           - JES_HF
@@ -544,7 +538,6 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2023
           - JES_FlavorQCD
-          - JES_BBEC1
           - JES_EC2
           - JES_EC2_2023
           - JES_HF
@@ -559,7 +552,20 @@ default_jets_calibration:
           - JES_Absolute
           - JES_Absolute_2023
           - JES_FlavorQCD
+          - JES_EC2
+          - JES_EC2_2023
+          - JES_HF
+          - JES_HF_2023
           - JES_BBEC1
+          - JES_BBEC1_2023
+          - JES_RelativeBal
+          - JES_RelativeSample_2023
+          - JER
+      "2024":
+        AK4PFPuppi:      
+          - JES_Absolute
+          - JES_Absolute_2023
+          - JES_FlavorQCD
           - JES_EC2
           - JES_EC2_2023
           - JES_HF
@@ -659,6 +665,12 @@ jets_calibration:
       #AK8PFPuppi: "FatJet"
       #AK4PFPuppiPNetRegression: "Jet"
       #AK4PFPuppiPNetRegressionPlusNeutrino: "Jet"
+      
+    "2024":
+      AK4PFPuppi: "Jet"
+      #AK8PFPuppi: "FatJet"
+      #AK4PFPuppiPNetRegression: "Jet"
+      #AK4PFPuppiPNetRegressionPlusNeutrino: "Jet"
      
   jec_name_map_MC: "${default_jets_calibration.jec_name_map_MC}"
   jec_name_map_Data: "${default_jets_calibration.jec_name_map_Data}"
@@ -692,6 +704,10 @@ jets_calibration:
       AK4PFPuppi: True
       AK4PFPuppiPNetRegression: True
       AK4PFPuppiPNetRegressionPlusNeutrino: True
+    "2024": 
+      AK4PFPuppi: True
+      AK4PFPuppiPNetRegression: True
+      AK4PFPuppiPNetRegressionPlusNeutrino: True
 
   apply_jec_Data:  # this is needed to know which collection is corrected with which jet factory
     2016_PreVFP: 
@@ -719,6 +735,10 @@ jets_calibration:
       AK4PFPuppiPNetRegression: True
       AK4PFPuppiPNetRegressionPlusNeutrino: True
     2023_postBPix: 
+      AK4PFPuppi: True
+      AK4PFPuppiPNetRegression: True
+      AK4PFPuppiPNetRegressionPlusNeutrino: True
+    "2024": 
       AK4PFPuppi: True
       AK4PFPuppiPNetRegression: True
       AK4PFPuppiPNetRegressionPlusNeutrino: True
@@ -824,3 +844,142 @@ jets_calibration:
   # the key default_jets_calibration.variations.full_variations contains the full setup of JET variations.
   # setup `jets_calibration.variations == "${default_jets_calibration.variations.full_variations}"` to use all variations
   variations: "${default_jets_calibration.variations.total_variation}"
+
+jets_calibration_clib:
+  2016_PreVFP:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2016preVFP_UL/jet_jerc.json.gz"
+    jec_mc: Summer19UL16_V7_MC
+    jec_data: Summer19UL16_RunFGH_V7_DATA
+    jec_levels:
+      - L1FastJet
+      - L2Relative
+    jer: Summer20UL16_JRV3_MC
+    junc:
+      - FlavorQCD
+      - FlavorPureBottom
+      - FlavorPureQuark
+      - FlavorPureGluon
+      - FlavorPureCharm
+      - Regrouped_BBEC1
+      - Regrouped_Absolute
+      - Regrouped_RelativeBal
+      - RelativeSample
+
+  2016_PostVFP:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2016postVFP_UL/jet_jerc.json.gz"
+    jec_mc: Summer19UL16APV_V7_MC
+    jec_data:
+      B: Summer19UL16APV_RunBCD_V7_DATA
+      C: "${default_jets_calibration.jec_correctionlib.2016_PostVFP.jec_data.B}"
+      D: "${default_jets_calibration.jec_correctionlib.2016_PostVFP.jec_data.B}"
+      E: Summer19UL16APV_RunEF_V7_DATA
+      F: "${default_jets_calibration.jec_correctionlib.2016_PostVFP.jec_data.E}"
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.jec_levels}"
+    jer: Summer20UL16APV_JRV3_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.junc}"
+
+  "2017":
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2017_UL/jet_jerc.json.gz"
+    jec_mc: Summer19UL17_V5_MC
+    jec_data:
+      B: Summer19UL17_RunB_V5_DATA
+      C: Summer19UL17_RunC_V5_DATA
+      D: Summer19UL17_RunD_V5_DATA
+      E: Summer19UL17_RunE_V5_DATA
+      F: Summer19UL17_RunF_V5_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.jec_levels}"
+    jer: Summer19UL17_JRV2_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.junc}"
+
+  "2018":
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2018_UL/jet_jerc.json.gz"
+    jec_mc: Summer19UL18_V5_MC
+    jec_data:
+      A: Summer19UL18_RunA_V5_DATA
+      B: Summer19UL18_RunB_V5_DATA
+      C: Summer19UL18_RunC_V5_DATA
+      D: Summer19UL18_RunD_V5_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.jec_levels}"
+    jer: Summer19UL18_JRV2_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2016_PreVFP.junc}"
+
+  2022_preEE:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2022_Summer22/jet_jerc.json.gz"
+    jec_mc: Summer22_22Sep2023_V2_MC
+    jec_data: Summer22_22Sep2023_RunCD_V2_DATA
+    jec_levels:
+      - L1FastJet
+      - L2Relative
+      - L3Absolute
+      - L2L3Residual
+    jer: Summer22_22Sep2023_JRV1_MC
+    junc:
+      - AbsoluteMPFBias
+      - AbsoluteScale
+      - FlavorQCD
+      - Fragmentation
+      - PileUpDataMC
+      - PileUpPtBB
+      - PileUpPtEC1
+      - PileUpPtEC2
+      - PileUpPtHF
+      - PileUpPtRef
+      - RelativeFSR
+      - RelativeJERHF
+      - RelativePtBB
+      - RelativePtHF
+      - RelativeBal
+      - SinglePionECAL
+      - SinglePionHCAL
+      - AbsoluteStat
+      - RelativeJEREC1
+      - RelativeJEREC2
+      - RelativePtEC1
+      - RelativePtEC2
+      - TimePtEta
+      - RelativeSample
+      - RelativeStatEC
+      - RelativeStatFSR
+      - RelativeStatHF
+      - Total
+
+  2022_postEE:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2022_Summer22EE/jet_jerc.json.gz"
+    jec_mc: Summer22EE_22Sep2023_V2_MC
+    jec_data:
+      E: Summer22EE_22Sep2023_RunE_V2_DATA
+      F: Summer22EE_22Sep2023_RunF_V2_DATA
+      G: Summer22EE_22Sep2023_RunG_V2_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2022_preEE.jec_levels}"
+    jer: Summer22EE_22Sep2023_JRV1_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2022_preEE.junc}"
+
+  2023_preBPix:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2023_Summer23/jet_jerc.json.gz"
+    jec_mc: Summer23Prompt23_V2_MC
+    jec_data: Summer23Prompt23_V2_DATA
+      # Cv1: Summer23Prompt23_RunCv123_V1_DATA
+      # Cv2: "${default_jets_calibration.jec_correctionlib.2023_preBPix.jec_data.Cv1}"
+      # Cv3: "${default_jets_calibration.jec_correctionlib.2023_preBPix.jec_data.Cv1}"
+      # Cv4: Summer23Prompt23_RunCv4_V1_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2022_preEE.jec_levels}"
+    jer: Summer23Prompt23_RunCv1234_JRV1_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2022_preEE.junc}"
+
+  2023_postBPix:
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2023_Summer23BPix/jet_jerc.json.gz"
+    jec_mc: Summer23BPixPrompt23_V3_MC
+    jec_data: Summer23BPixPrompt23_RunD_V3_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2022_preEE.jec_levels}"
+    jer: Summer23BPixPrompt23_RunD_JRV1_MC
+    junc: "${default_jets_calibration.jec_correctionlib.2022_preEE.junc}"
+
+  "2024":
+    json_path: "/cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2024_Summer24/jet_jerc.json.gz"
+    jec_mc: Summer24Prompt24_V1_MC
+    jec_data: Summer24Prompt24_V1_DATA
+    jec_levels: "${default_jets_calibration.jec_correctionlib.2022_preEE.jec_levels}"
+    jer: Summer23BPixPrompt23_RunD_JRV1_MC  # For the time being the 2023 jers shall be used https://cms-jerc.web.cern.ch/Recommendations/#2024_1
+    junc: "${default_jets_calibration.jec_correctionlib.2022_preEE.junc}"
+
+
