--- a/pocket_coffea/parameters/lepton_scale_factors.yaml
+++ b/pocket_coffea/parameters/lepton_scale_factors.yaml
@@ -80,6 +80,14 @@ lepton_scale_factors:
           pt_gt_20_lt_75: Reco20to75
           pt_gt_75: RecoAbove75
 
+      '2024':
+        file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2024_Summer24/electron_v1.json.gz
+        name: Electron-ID-SF
+        reco:
+          # pt_lt_20: RecoBelow20
+          pt_gt_20_lt_75: Reco20to75
+          pt_gt_75: RecoAbove75
+
     era_mapping:
       # this is needed because the correction set provided by EGM
       # have a fixed set of era labels, different from ours
@@ -103,6 +111,7 @@ lepton_scale_factors:
         '2022_postEE': True
         '2023_preBPix': True
         '2023_postBPix': True
+        '2024': True
       
       correctionlib_config:
         '2022_preEE':
@@ -122,6 +131,11 @@ lepton_scale_factors:
             smear: "2023PromptC_SmearingJSON"
         '2023_postBPix':
           file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2023_Summer23BPix/electronSS.json.gz
+          correction_name:
+            scale: "2023PromptD_ScaleJSON"
+            smear: "2023PromptD_SmearingJSON"
+        '2024':
+          file: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/EGM/2024_Summer24/electronSS_EtDependent_v1.json.gz
           correction_name:
             scale: "2023PromptD_ScaleJSON"
             smear: "2023PromptD_SmearingJSON"
